--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta name="keywords" content="Bottles for Bales, Horse Sanctuary, Horse Rescue, Recycle" />
 
     <nav class="navbar navbar-expand-md navbar-light sticky-top">
-        <div class="container-xxl rounded-3 border border-dark border-2 bg-gradient" id="containerDark">
+        <div class="container-xl rounded-3 border border-dark border-2 bg-gradient" id="containerDark">
             <a class="navbar-brand" href="./index.html"><h3 class="text-center pt-2" id="h1">🐎</h3></a>
             <h3 class="text-center pt-2" id="h1">BottlesForBales.org</h3>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
@@ -169,7 +169,7 @@
 <!--?--------------------------------------------------------------- FOOTER ------------------------------------------------------------------------------->
 <!---->
 <footer>                                              
-    <div class="container-xxl mb-1 rounded-3 border border-dark border-2 bg-gradient" id="containerDark" >                                 
+    <div class="container-xl mb-1 rounded-3 border border-dark border-2 bg-gradient" id="containerDark" >                                 
         <div class="row">
             <div class="col-12 text-center">
                 <a  class="btn bi-telephone-fill" href="tel:518-878-8201"><svg width="24" height="24" fill="currentColor" viewBox="0 0 16 16">
@@ -199,7 +199,7 @@
             </div>
             <div class="modal-footer align-self-center" id="modalFooter">             
                 <button type="button" class="btn btn-success" data-bs-dismiss="modal">Sure!</button> 
-                <button type="button" class="btn btn-secondary">Who are you guys?</button>
+                <button type="button" class="btn btn-secondary" href="./aboutus.html" >Who are you guys?</button>
             </div>
         </div>
     </div>
