--- a/aboutus.html
+++ b/aboutus.html
@@ -21,9 +21,9 @@
     <meta name="keywords" content="Bottles for Bales, Horse Sanctuary, Horse Rescue, Recycle" />
 
     <nav class="navbar navbar-expand-md navbar-light sticky-top">
-        <div class="container-xxl rounded-3 border border-dark border-2 bg-gradient" id="containerDark">
+        <div class="container-xl rounded-3 border border-dark border-2 bg-gradient" id="containerDark">
             <a class="navbar-brand" href="./index.html">
-                <img src="img/site-logo.svg" alt="">
+                <img src="img/site-logo.svg" alt="Bottles for Bales" >
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent">
@@ -32,16 +32,13 @@
             <div class="collapse navbar-collapse mb-1 mt-0 mx-2 border-white" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto pt-2 align-items-center" id="containerDark">
                     <li class="nav-item">
-                        <a class="nav-link align-items-end btn btn-outline-dark mx-2 pt-1 pb-1" href="./index.html"
-                            id="containerDark"><strong> Home </strong></a>
+                        <a class="nav-link active align-items-end btn btn-outline-dark mx-2 pt-1 pb-1" href="./index.html" id="containerDark"><strong> Home </strong></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link align-items-end btn btn-outline-dark mx-2 mt-1 mb-1 pt-1 pb-1"
-                            href="./dropoff.html" id="containerDark"><strong> Drop-off Locations </strong></a>
+                        <a class="nav-link align-items-end btn btn-outline-dark mx-2 mt-1 mb-1 pt-1 pb-1" href="./dropoff.html" id="containerDark"><strong> Drop-off Locations </strong></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active align-items-end btn btn-outline-dark mx-2 pt-1 pb-1"
-                            href="./aboutus.html" id="containerDark"><strong> About Us </strong></a>
+                        <a class="nav-link align-items-end btn btn-outline-dark mx-2 pt-1 pb-1" href="#" id="containerDark"><strong> About Us </strong></a>
                     </li>
                 </ul>
             </div>
@@ -70,15 +67,15 @@
             <div class="col-lg-9 col-sm-6">
                 <!-- * Explain Bottles for bales ------------------------------------>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                    culpa qui officia deserunt mollit anim id est laborum.
+                    Bottles for Bales is a non-profit organizations started by Ed Wagner. All proceeds go to Little Brook Farm (horse sanctuary).
                     <br><br>
-                    Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-                    dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
-                    sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    Ed started Bottles for Bales in 2019 on a mission to support the animals at Little Brook Farm; a horse sanctuary and animal rescue.
+                    Every day after volunteering with Little Brook Farm, he makes trips to pick up bottles and delivers to local recycling 
+                    facilities. Ed is dedicated to the mission.
+                    <br><br>
+                    Last year alone Bottles for Bales raised over $15,000. We are hoping to do even better this year. With more contributors
+                    joining in each passing month; the future has never looked so bright. Welcome to anyone donating to the first time, and
+                    thank you to our returning patrons. Ed and the horses appreciate the hay!! 
                 </p>
             </div>
         </div>
@@ -88,114 +85,37 @@
     <div class="container-lg mb-2 mt-2 border border-dark rounded-3 bg-gradient border-2 pd-25" id="containerDark">
         <div class="row">
             <div class="col">
-                <h5 class="text-center mt-3">Little Brook Farm (Horse Sanctuary)</h5>
+                <h5 class="text-center mt-3">Little Brook Farm</h5>
                 <hr>
             </div>
         </div>
         <div class="row align-items-center ">
             <div class="col-lg-9 col-sm-6">
-                <!-- * Explain Bottles for bales ------------------------------------>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                    culpa qui officia deserunt mollit anim id est laborum.
+                    Little Brook Farm, established in 1977, is one of the oldest horse rescue/sanctuaries in the US. We have rescued hundreds of horses
+                     over the years and currently oversee the life long care of 100 horses. They are never bred or sold, and we maintain a strict
+                     “must return if…” policy when adopted.
                     <br><br>
-                    Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-                    dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
-                    sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    Through the generosity of 6 landowners and our own 55-acre farm, we have access to a total of 125 acres available for the 65 
+                    horses we care for daily. Our rescue resources include 20 outstanding foster homes that provide for an additional 35 horses and donkeys.
+                    <br><br>
+                    *We receive no government funding and have no paid employees.
+                    <br><br>
+                    Little Brook Farm is home to B.I.T.S. (Balanced Innovative Teaching Strategies, Inc.), a non-profit 501c3 through the NYS Department
+                    of Education. B.I.T.S. has been providing multi-faceted educational, vocational and therapeutic programs utilizing the rehabilitated
+                    animals of Little Brook Farm since 1986. The horses are our "working partners." We provide a wide range of safety-conscious programs 
+                    at our facility, as well as other locations, to over 80 schools, agencies and organizations. Our students’ success is achieved largely 
+                    through the relationship with the horse: he is non-judgmental, provides immediate feedback and, as a subject, offers unlimited possibilities
+                    to grow mentally, physically and emotionally.
                 </p>
             </div>
             <div class="col-lg-3 col-sm-6 pb-2  align-self-center">
-                <img src="img/lbf.jpg" class="w-100 h-100 rounded-3" alt="Picture of Ed" />
+                <img src="img/lbf.jpg" class="w-100 h-100 rounded-3 " alt="A picture of a sign that says Little Brook Farm" />
             </div>
         </div>
     </div>
 
-    <!-- About Abe -->
-    <div class="container-lg mb-2 mt-2 border border-dark rounded-3 bg-gradient border-2 pd-25" id="containerLight">
-        <div class="row">
-            <div class="col">
-                <h5 class="text-center mt-3">Abe</h5>
-                <hr>
-            </div>
-        </div>
-        <div class="row align-items-center ">
-            <div class="col-lg-4 col-sm-6 pb-2  align-self-center">
-                <img src="img/1.jpg" class="w-100 h-100 rounded-3" alt="Picture of Ed" />
-            </div>
-            <div class="col-lg-8 col-sm-6">
-                <!-- * Explain Bottles for bales ------------------------------------>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                    culpa qui officia deserunt mollit anim id est laborum.
-                    <br><br>
-                    Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-                    dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
-                    sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                </p>
-            </div>
-        </div>
-    </div>
-
-    <!-- About Teamo and Jackson -->
-    <div class="container-lg mb-2 mt-2 border border-dark rounded-3 bg-gradient border-2 pd-25" id="containerDark">
-        <div class="row">
-            <div class="col">
-                <h5 class="text-center mt-3">Teamo and Jackson</h5>
-                <hr>
-            </div>
-        </div>
-        <div class="row align-items-center ">
-            <div class="col-lg-4 col-sm-6">
-                <!-- * Explain Bottles for bales ------------------------------------>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                    culpa qui officia deserunt mollit anim id est laborum.
-
-                </p>
-            </div>
-            <div class="col-lg-8 col-sm-6 pb-2  align-self-center">
-                <img src="img/twoHorses.jpg" class="w-100 h-100 rounded-3" alt="Picture of Ed" />
-            </div>
-        </div>
-    </div>
-
-    <!-- Greeting Container -->
-    <div class="container-lg mb-2 mt-2 border border-dark rounded-3 bg-gradient border-2 pd-25" id="containerLight">
-        <div class="row">
-            <div class="col">
-                <h5 class="text-center mt-3">Donkeys too!</h5>
-                <hr>
-            </div>
-        </div>
-        <div class="row align-items-center ">
-            <div class="col-lg-3 col-sm-6 pb-2  align-self-center">
-                <img src="img/donkey1.jpg" class="w-100 h-100 rounded-3" alt="Picture of Ed" />
-            </div>
-            <div class="col-lg-9 col-sm-6">
-                <!-- * Explain Bottles for bales ------------------------------------>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                    culpa qui officia deserunt mollit anim id est laborum.
-                    <br><br>
-                    Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-                    dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
-                    sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                </p>
-            </div>
-        </div>
-    </div>
+    
 
 </body>
 <!--?--------------------------------------------------------------- FOOTER ------------------------------------------------------------------------------->
