--- a/dropoff.html
+++ b/dropoff.html
@@ -21,9 +21,9 @@
     <meta name="keywords" content="Bottles for Bales, Horse Sanctuary, Horse Rescue, Recycle" />
 
     <nav class="navbar navbar-expand-md navbar-light sticky-top">
-        <div class="container-xxl rounded-3 border border-dark border-2 bg-gradient" id="containerDark">
+        <div class="container-xl rounded-3 border border-dark border-2 bg-gradient" id="containerDark">
             <a class="navbar-brand" href="./index.html">
-                <img src="img/site-logo.svg" alt="">
+                <img src="img/site-logo.svg" alt="Bottles for Bales" >
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent">
@@ -32,16 +32,13 @@
             <div class="collapse navbar-collapse mb-1 mt-0 mx-2 border-white" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto pt-2 align-items-center" id="containerDark">
                     <li class="nav-item">
-                        <a class="nav-link align-items-end btn btn-outline-dark mx-2 pt-1 pb-1" href="./index.html"
-                            id="containerDark"><strong> Home </strong></a>
+                        <a class="nav-link active align-items-end btn btn-outline-dark mx-2 pt-1 pb-1" href="./index.html" id="containerDark"><strong> Home </strong></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active align-items-end btn btn-outline-dark mx-2 mt-1 mb-1 pt-1 pb-1"
-                            href="./dropoff.html" id="containerDark"><strong> Drop-off Locations </strong></a>
+                        <a class="nav-link align-items-end btn btn-outline-dark mx-2 mt-1 mb-1 pt-1 pb-1" href="#" id="containerDark"><strong> Drop-off Locations </strong></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link align-items-end btn btn-outline-dark mx-2 pt-1 pb-1" href="./aboutus.html"
-                            id="containerDark"><strong> About Us </strong></a>
+                        <a class="nav-link align-items-end btn btn-outline-dark mx-2 pt-1 pb-1" href="./aboutus.html" id="containerDark"><strong> About Us </strong></a>
                     </li>
                 </ul>
             </div>
@@ -67,7 +64,7 @@
             <div class="col">
                 <!-- * Explain Bottles for bales ------------------------------------>
                 <p>
-                    Below is a list of places you can drop off bottles. Just tell one of the staff that you are donating
+                    Below is a list of places you can drop off bottles. Just notify one of the staff that you are donating
                     to Bottles for Bales / Little Brook Farm.
                 </p>
             </div>
