last tweek before launch

--- a/aboutus.html
+++ b/aboutus.html
@@ -67,7 +67,7 @@
             <div class="col-lg-9 col-sm-6">
                 <!-- * Explain Bottles for bales ------------------------------------>
                 <p>
-                    Bottles for Bales is a non-profit organizations started by Ed Wagner. All proceeds go to Little Brook Farm (horse sanctuary).
+                    Bottles for Bales is a non-profit organization started by Ed Wagner. All proceeds go to Little Brook Farm (horse sanctuary).
                     <br><br>
                     Ed started Bottles for Bales in 2019 on a mission to support the animals at Little Brook Farm; a horse sanctuary and animal rescue.
                     Every day after volunteering with Little Brook Farm, he makes trips to pick up bottles and delivers to local recycling 
